[gd_scene load_steps=7 format=3 uid="uid://barxbladevehp"]

[ext_resource type="Script" uid="uid://tmoqov4rd2vc" path="res://System/UI/Loading Screen/loading_screen.gd" id="1_4wb0f"]
[ext_resource type="Texture2D" uid="uid://damr8hmhl6mbp" path="res://Assets/System/Loading Screen/Loading_Scene(Up).png" id="2_0jah8"]
[ext_resource type="Texture2D" uid="uid://bg0vct06fu2wl" path="res://Assets/System/Loading Screen/Loading_Scene(progress).png" id="3_sbsyx"]
[ext_resource type="Texture2D" uid="uid://c38uefnqjpon7" path="res://Assets/System/Loading Screen/Blue.png" id="4_odgfw"]
[ext_resource type="Texture2D" uid="uid://7jjpjiifvwkq" path="res://Assets/System/Loading Screen/Yellow.png" id="5_sryh5"]
[ext_resource type="Texture2D" uid="uid://qmfmkv12qh3v" path="res://Assets/System/Loading Screen/Red.png" id="6_a32we"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4wb0f")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0866292, 0.0866292, 0.0866292, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = 66.0
offset_right = 94.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "LOADING..."

[node name="Blue Arrow" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 267.0
offset_top = 545.0
offset_right = 307.0
offset_bottom = 585.0
texture = ExtResource("4_odgfw")

[node name="Yellow Arrow" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 227.0
offset_top = 545.0
offset_right = 267.0
offset_bottom = 585.0
texture = ExtResource("5_sryh5")

[node name="Red Arrow" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 187.0
offset_top = 545.0
offset_right = 227.0
offset_bottom = 585.0
texture = ExtResource("6_a32we")

[node name="End_Position_Blue" type="Marker2D" parent="."]
position = Vector2(977, 537)

[node name="End_Position_Yellow" type="Marker2D" parent="."]
position = Vector2(937, 537)

[node name="End_Position_Red" type="Marker2D" parent="."]
position = Vector2(897, 537)

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -302.0
offset_top = 136.0
offset_right = 302.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 0

[node name="LoadingProgressBar" type="TextureProgressBar" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_over = ExtResource("2_0jah8")
texture_progress = ExtResource("3_sbsyx")
